# temnerf

./: .gitignore  LICENSE  README.md  clean_outputs.py  compute_projection.py  create_projections_from_phantom.ipynb  learn_volume.py  marching_cubes.ipynb  psnr.ipynb  pyproject.toml  slice_viewer.py  test.ipynb  visualize_volume.py
SIRT/: calculations.py  showrec.py  sirt.ipynb  sirt.py
src/: run_training.py  run_training_odl.py
src/config/: example.yaml  example_odl.yaml
src/data/: datasets.py  emdataset.py  imagesdataset.py  nerfimage.py  odldataset.py  projectionsdataset.py  transforms.py
src/models/: encoders.py  nerf.py  odlnerf.py
src/utils/: chart_writer.py  data.py  debug.py  image.py  parallelbeamprojector.py  phantom.py  ray.py  render.py  utils.py
