[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "temnerf"
version = "0.0.1"
dependencies = [
    "tinycudann @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch"
]

description = "Package containing the code required to run experiments on the application of NeRFs for reconstruction of Electronic Tomography data"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
temnerf_train = "run_training:run"

[tool.setuptools.packages.find]
where = ["src"]